--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
-discord==1.7.3
-discord.py==1.7.3
-
+git+https://github.com/Rapptz/discord.py/@rewrite
+PyNaCl==1.3.0
+pandas
+dnspython==1.16.0
+async-timeout==3.0.1
